2008-10-16  John W. Eaton  <jwe@octave.org>

	* graphics.cc (base_properties::remove_child): Handle children as
	a column vector instead of a row vector.

	* utils.cc (Fis_absolute_filename, Fis_rooted_relative_filename,
	Fmake_absolute_filename, Ffind_dir_in_path): New functions.

2008-10-16  David Bateman  <dbateman@free.fr>

	* graphics.cc (void axes::properties::set_defaults 
	(base_graphics_object&,	const std::string&)): Preserve font
	and position properties if the axis is "replaced".

2008-10-16  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (class axes::properties): New property: interpreter.

2008-10-15  David Bateman  <dbateman@free.fr>

	* ov-class.c (Fsuperiorto, Finferiorto): Allow more than one class
	to be defined at a time.

2008-10-12  David Bateman  <dbateman@free.fr>

	* pt-colon.cc (octave_value tree_colon_expression::make_range 
	(const octave_value&, const octave_value&, const octave_value&)):
	Treating class overloading of colon operator.
	(octave_value tree_colon_expression::rvalue (void)): Ditto.

2008-10-10  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (base_properties::adopt): Place new child at front
	of list, not end.  Make list of children a column vector instead
	of a row vector.

	* graphics.cc (gh_manager::do_free): Set the beingdeleted
	property, then delete the children, then execute the deletefcn.
	(axes::properties::set_defaults, axes::properties::remove_child,
	axes::properites::delete_children): Call delete_text_child to
	manage the title, xlabel, ylabel, and zlabel properties.
	(axes::properties::get_title, axes::properties::get_xlabel,
	axes::properties::get_ylabel, axes::properties::get_zlabel): Delete.

	* graphics.h.in (axes::properites::title,
	axes::properites::xlabel, axes::properites::ylabel,
	axes::properites::zlabel): No longer mutable.  Don't generate
	factory default values or custom get functions for these
	properties.

	* graphics.cc (axes::properties::delete_text_child): New function.